Updated page 1200 and add some function

--- a/static/css/Mycss.css
+++ b/static/css/Mycss.css
@@ -9,9 +9,9 @@
     background-color: #e9ecef;
 }
 
-a {
+/* a {
         color: #fff !important;
-    }
+    } */
 
     a:hover {
         color: greenyellow !important;
